WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53502
Repeating gradients drawn incorrectly
https://bugs.webkit.org/show_bug.cgi?id=53502
Summary
Repeating gradients drawn incorrectly
Rafał Chłodnicki
Reported
2011-02-01 09:21:02 PST
Created
attachment 80769
[details]
repeating gradient testcase Spec states [
http://dev.w3.org/csswg/css3-images/#repeating-gradients
]: "the color-stops are repeated infinitely in both directions, with their positions shifted by multiples of the difference between the last specified color-stop's position and the first specified color-stop's position. For example, ‘repeating-linear-gradient(red 10px, blue 50px)’ is equivalent to ‘linear-gradient(..., red -30px, blue 10px, red 10px, blue 50px, red 50px, blue 90px, ...)’. Note that the last color-stop and first color-stop will always coincide at the boundaries of each group, which will produce sharp transitions if the gradient does not start and end with the same color." I've included TC with two gradients: repeating-linear-gradient(red 10%, green 10%, blue 50%) and repeating-linear-gradient(green 10%, blue 50%) It makes sense to me that they should render identically. They don't in WebKit.
Attachments
repeating gradient testcase
(998 bytes, text/html)
2011-02-01 09:21 PST
,
Rafał Chłodnicki
no flags
Details
Patch
(7.36 KB, patch)
2011-02-12 11:23 PST
,
Simon Fraser (smfr)
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-02-01 10:03:58 PST
Thanks.
Simon Fraser (smfr)
Comment 2
2011-02-12 11:23:21 PST
Created
attachment 82237
[details]
Patch
Andreas Kling
Comment 3
2011-02-13 04:29:27 PST
Comment on
attachment 82237
[details]
Patch r=me
Simon Fraser (smfr)
Comment 4
2011-02-13 18:13:36 PST
http://trac.webkit.org/changeset/78449
WebKit Review Bot
Comment 5
2011-02-13 19:07:18 PST
http://trac.webkit.org/changeset/78449
might have broken Qt Linux Release The following tests are not passing: fast/gradients/css3-repeating-end-fill.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug